--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,4 @@
-#Wed Jul 08 11:17:51 CST 2015
+#Mon Aug 24 21:47:09 CDT 2015
 eclipse.preferences.version=1
 encoding//WebContent/AddEMP.jsp=UTF-8
 encoding//WebContent/HomePage.jsp=UTF-8
-encoding//WebContent/test.jsp=UTF-8
